adding two albums

--- a/album-store/src/app/dashboard/dashboard.component.html
+++ b/album-store/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
@@ -9,30 +10,47 @@
 </nav>
 
 <div class="artist">
-    <ul>
-    <a href="/FatherofAsahd" routerLinkActive="activebutton">
-        <li>
-            <!-- DJ Khaled -->
-            Father of Asahd
-        </li>
-    </a>
-    <a href="">
-        <li>
-            <!-- Justin Biber -->
-            Changes
-        </li>
-    </a>
-    <a href="">
-        <li>
-            <!-- Zayn Malik -->
-            Icarus Falls
-        </li>
-    </a>
-    <a href="/revival">
-        <li>
-            <!-- Eminem -->
-            Revival
-        </li>
-    </a>
+    <ul style="display: flex;">
+        <span class="headerFirstTwo">
+            <a href="/FatherofAsahd" routerLinkActive="activebutton">
+                <img style=" background: url('https://i.embed.ly/1/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d00001e02fa2741071b31bb94cb4232ae&key=fc778e44915911e088ae4040f9f86dcd') no-repeat;
+        height: 300px;
+        width: 300px;">
+                <li>
+                    <!-- DJ Khaled -->
+                    Father of Asahd
+                </li>
+            </a>
+            <a href="Changes" routerLinkActive="activebutton">
+                <img style=" background: url('https://upload.wikimedia.org/wikipedia/en/1/16/Justin_Bieber_-_Changes.png') no-repeat;
+        height: 300px;
+        width: 300px;">
+                <li>
+                    <!-- Justin Biber -->
+                    Changes
+                </li>
+            </a>
+        </span>
+        <span class="headerSecondTwo">
+            <a href="Icarus-Falls" routerLinkActive="activebutton">
+                <img style="background: url('https://upload.wikimedia.org/wikipedia/en/e/eb/Zayn_%E2%80%93_Icarus_Falls.png') no-repeat;
+        height: 300px;
+        width: 300px;">
+                <li>
+                    <!-- Zayn Malik -->
+                    Icarus Falls
+                </li>
+            </a>
+            <a href="/revival">
+                <img style=" background: url('https://upload.wikimedia.org/wikipedia/en/5/51/Revival_Eminem_Cover.png') no-repeat;
+            height: 300px;
+            width: 300px;">
+                <li>
+                    <!-- Eminem -->
+                    Revival
+                </li>
+            </a>
+        </span>
     </ul>
+
 </div>
