--- a/album-store/src/app/father-of-asahd/father-of-asahd.component.html
+++ b/album-store/src/app/father-of-asahd/father-of-asahd.component.html
@@ -1,1 +1,84 @@
-<p>father-of-asahd works!</p>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@600&family=Roboto:ital,wght@1,300&family=STIX+Two+Text:ital@1&family=Style+Script&display=swap');
+    </style>
+<div class="row description">
+    <div class="col-sm-2">
+        <div class="img">
+        </div>
+        <div class="col-sm-6">
+            <p class="album-name">Father-of-Asahd</p>
+            <p class="band-name"> DJ Khaled</p>
+            <p class="album-release-date">May 17, 2019</p>
+        </div>
+    </div>
+  </div>
+<div class="row tracklisting">
+  <table>
+    <tr class="header">
+      <th>No</th>
+      <th>Name</th>
+      <th>Time</th>
+      <th>Price</th>
+    </tr>
+    <tr>
+      <th>1</th>
+      <th>holy Mountain</th>
+      <th>4:45</th>
+      <th>$ 0.99</th>
+    </tr>
+    <tr>
+      <th>2</th>
+      <th>wish wish</th>
+      <th>3:22</th>
+      <th>$ 0.99</th>
+    </tr>
+    <tr>
+      <th>3</th>
+      <th>Jealous</th>
+      <th>4:15</th>
+      <th>$ 0.99</th>
+    </tr>
+    <tr>
+      <th>4</th>
+      <th>Just us</th>
+      <th>3:41</th>
+      <th>$ 0.99</th>
+    </tr>
+    <tr>
+      <th>5</th>
+      <th>you Stay</th>
+      <th>4:35</th>
+      <th>$ 0.99</th>
+    </tr> 
+    <tr>
+      <th>6</th>
+      <th>Celebrate</th>
+      <th>3:26</th>
+      <th>$ 0.99</th>
+    </tr>
+    <tr>
+      <th>7</th>
+      <th>Higher</th>
+      <th>2:56</th>
+      <th>$ 0.99</th>
+    </tr> 
+    <tr>
+      <th>8</th>
+      <th>won't Take my soul</th>
+      <th>4:19</th>
+      <th>$ 0.99</th>
+    </tr>
+    <tr>
+      <th>9</th>
+      <th>Weather the Storm</th>
+      <th>2:33</th>
+      <th>$ 0.99</th>
+    </tr>
+    <tr>
+      <th>10</th>
+      <th>big boy talk</th>
+      <th>2:45</th>
+      <th>$ 0.99</th>
+    </tr>
+
+
