--- a/album-store/src/app/icarus-falls/icarus-falls.component.html
+++ b/album-store/src/app/icarus-falls/icarus-falls.component.html
@@ -1,15 +1,15 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@600&family=Roboto:ital,wght@1,300&family=STIX+Two+Text:ital@1&family=Style+Script&display=swap');
-    </style>
+</style>
 <div class="row description">
   <div class="col-sm-2">
-      <div class="img">
-      </div>
-      <div class="col-sm-6">
-          <p class="album-name">Revival</p>
-          <p class="band-name">Eminem</p>
-          <p class="album-release-date">December 15, 2017</p>
-      </div>
+    <div class="img">
+    </div>
+    <div class="col-sm-6">
+      <p class="album-name">Icarus Falls</p>
+      <p class="band-name">Zayn Malik</p>
+      <p class="album-release-date">14 December 2018</p>
+    </div>
   </div>
 </div>
 <div class="row tracklisting">
@@ -22,62 +22,64 @@
     </tr>
     <tr>
       <th>1</th>
-      <th>River</th>
-      <th>3:47</th>
+      <th>Rainberry</th>
+      <th>2:51</th>
       <th>$ 0.99</th>
     </tr>
     <tr>
       <th>2</th>
-      <th>Walk on Water</th>
-      <th>5:04</th>
+      <th>Natural</th>
+      <th>3:13</th>
       <th>$ 0.99</th>
     </tr>
     <tr>
       <th>3</th>
-      <th>believe</th>
-      <th>5:15</th>
+      <th>Back to Life</th>
+      <th>3:15</th>
       <th>$ 0.99</th>
     </tr>
     <tr>
       <th>4</th>
-      <th>chloraseptic</th>
-      <th>5:01</th>
+      <th>Common</th>
+      <th>3:52</th>
       <th>$ 0.99</th>
     </tr>
     <tr>
       <th>5</th>
-      <th>framed</th>
-      <th>4:13</th>
+      <th>Imprint</th>
+      <th>3:10</th>
       <th>$ 0.99</th>
     </tr>
     <tr>
       <th>6</th>
-      <th>Revival(Interlude)</th>
-      <th>0:51</th>
+      <th>Stand Still</th>
+      <th>3:18</th>
       <th>$ 0.99</th>
     </tr>
     <tr>
       <th>7</th>
-      <th>Like home(featuring Alicia Keys)</th>
-      <th>4:05</th>
+      <th>Tonight</th>
+      <th>3:40</th>
       <th>$ 0.99</th>
     </tr>
     <tr>
       <th>8</th>
-      <th>Remind me</th>
-      <th>3:45</th>
+      <th>Flight of the Stars</th>
+      <th>3:20</th>
       <th>$ 0.99</th>
     </tr>
     <tr>
       <th>9</th>
-      <th>Remind me(intro)</th>
-      <th>0:26</th>
+      <th>if in Got you</th>
+      <th>3:19</th>
       <th>$ 0.99</th>
     </tr>
+
     <tr>
       <th>10</th>
-      <th>Untouchable</th>
-      <th>6:10</th>
+      <th>talk to me</th>
+      <th>3:00</th>
       <th>$ 0.99</th>
-    </tr>    
+    </tr>
+
   </table>
