--- a/album-store/src/app/navarasa/navarasa.component.css
+++ b/album-store/src/app/navarasa/navarasa.component.css
@@ -1,5 +1,5 @@
 .img{
-    background: url('https://i.embed.ly/1/image?url=https%3A%2F%2Fi.scdn.co%2Fimage%2Fab67616d00001e02fa2741071b31bb94cb4232ae&key=fc778e44915911e088ae4040f9f86dcd') no-repeat;
+    background: url('https://upload.wikimedia.org/wikipedia/en/e/ed/Navarasa_web_series.jpg') no-repeat;
     height: 300px;
     width: 300px;
     padding-right: 5em;
