updated Youtube Links

--- a/album-store/src/app/dashboard/dashboard.component.html
+++ b/album-store/src/app/dashboard/dashboard.component.html
@@ -51,6 +51,26 @@
                 </li>
             </a>
         </span>
+        <span class="headerThirdTwo">
+            <a href="/Navarasa">
+                <img style=" background: url('https://upload.wikimedia.org/wikipedia/en/e/ed/Navarasa_web_series.jpg') no-repeat;
+            height: 300px;
+            width: 260px;">
+                <li>
+                    <!-- Eminem -->
+                    Navarasa
+                </li>
+            </a>
+            <a href="/Gang-leader">
+                <img style=" background: url('https://upload.wikimedia.org/wikipedia/en/thumb/7/75/Gang_Leader_2019_film_poster.jpg/220px-Gang_Leader_2019_film_poster.jpg') no-repeat;
+            height: 293px;
+            width: 220px;">
+                <li>
+                    <!-- Eminem -->
+                    Gang-leader
+                </li>
+            </a>
+        </span>
     </ul>
 
 </div>
