--- a/album-store/src/app/father-of-asahd/father-of-asahd.component.html
+++ b/album-store/src/app/father-of-asahd/father-of-asahd.component.html
@@ -10,6 +10,10 @@
             <p class="band-name"> DJ Khaled</p>
             <p class="album-release-date">May 17, 2019</p>
         </div>
+        <div>
+          <iframe width="500" height="350" src="https://www.youtube.com/embed/kxloC1MKTpg" title="YouTube video player" frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-left: 30em;"></iframe>
+        </div>
     </div>
   </div>
 <div class="row tracklisting">
@@ -22,7 +26,7 @@
     </tr>
     <tr>
       <th>1</th>
-      <th>holy Mountain</th>
+      <th>No Brainer</th>
       <th>4:45</th>
       <th>$ 0.99</th>
     </tr>
