--- a/album-store/src/app/icarus-falls/icarus-falls.component.html
+++ b/album-store/src/app/icarus-falls/icarus-falls.component.html
@@ -10,6 +10,10 @@
       <p class="band-name">Zayn Malik</p>
       <p class="album-release-date">14 December 2018</p>
     </div>
+    <div>
+      <iframe width="500" height="350" src="https://www.youtube.com/embed/KYxY8dMnFDM" title="YouTube video player" frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-left: 30em;"></iframe>
+    </div>
   </div>
 </div>
 <div class="row tracklisting">
