--- a/album-store/src/app/gang-leader/gang-leader.component.html
+++ b/album-store/src/app/gang-leader/gang-leader.component.html
@@ -10,6 +10,10 @@
             <p class="band-name">anirudh ravichander</p>
             <p class="album-release-date">sep 13, 2019</p>
         </div>
+        <div>
+            <iframe width="500" height="350" src="https://www.youtube.com/embed/91EzD9VgwGk" title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-left: 30em;"></iframe>
+        </div>
     </div>
   </div>
 <div class="row tracklisting">
