--- a/album-store/src/app/navarasa/navarasa.component.html
+++ b/album-store/src/app/navarasa/navarasa.component.html
@@ -10,6 +10,10 @@
             <p class="band-name">karthik</p>
             <p class="album-release-date">aug 6, 2021</p>
         </div>
+        <div>
+            <iframe width="500" height="350" src="https://www.youtube.com/embed/mz1Bey6KjsQ" title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-left: 30em;"></iframe>
+        </div>
     </div>
 </div>
 <div class="row tracklisting">
