--- a/album-store/src/app/revival/revival.component.html
+++ b/album-store/src/app/revival/revival.component.html
@@ -10,6 +10,10 @@
           <p class="band-name">Eminem</p>
           <p class="album-release-date">December 15, 2017</p>
       </div>
+      <div>
+        <iframe width="500" height="350" src="https://www.youtube.com/embed/8CdcCD5V-d8" title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding-left: 30em;"></iframe>
+      </div>
   </div>
 </div>
 <div class="row tracklisting">
