--- a/album-store/src/app/dashboard/dashboard.component.html
+++ b/album-store/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-light bg-light" style="font-size: 1.5rem;">
     <div class="container-fluid">
         <span class="navbar-text">
             Welcome to Online Album Store
